tests/src/frontend/syntax/invalid/macro_typeid_type_dot.sk
base class B {
  macro fun m(): void {
    (0 : #ThisClass.X)
  }

  static fun f(): void {
    void
  }
}

fun main(): void {
  print_string("FAIL");
}
